julia/src/generated/_c_api.jl


function mts_tensormap(keys::mts_labels_t, blocks::Ptr{Ptr{mts_block_t}}, blocks_count::UIntptr)
    ccall((:mts_tensormap, libmetatensor), 
        Ptr{mts_tensormap_t},
        (mts_labels_t, Ptr{Ptr{mts_block_t}}, UIntptr,),
        keys, blocks, blocks_count
    )
end

function mts_tensormap_free(tensor::Ptr{mts_tensormap_t})
    ccall((:mts_tensormap_free, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t},),
        tensor
    )
end

function mts_tensormap_copy(tensor::Ptr{mts_tensormap_t})
    ccall((:mts_tensormap_copy, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{mts_tensormap_t},),
        tensor
    )
end

function mts_tensormap_keys(tensor::Ptr{mts_tensormap_t}, keys::Ptr{mts_labels_t})
    ccall((:mts_tensormap_keys, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{mts_labels_t},),
        tensor, keys
    )
end

function mts_tensormap_block_by_id(tensor::Ptr{mts_tensormap_t}, block::Ptr{Ptr{mts_block_t}}, index::UIntptr)
    ccall((:mts_tensormap_block_by_id, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{Ptr{mts_block_t}}, UIntptr,),
        tensor, block, index
    )
end

function mts_tensormap_blocks_matching(tensor::Ptr{mts_tensormap_t}, block_indexes::Ptr{UIntptr}, count::Ptr{UIntptr}, selection::mts_labels_t)
    ccall((:mts_tensormap_blocks_matching, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{UIntptr}, Ptr{UIntptr}, mts_labels_t,),
        tensor, block_indexes, count, selection
    )
end

function mts_tensormap_keys_to_properties(tensor::Ptr{mts_tensormap_t}, keys_to_move::mts_labels_t, fill_value::mts_array_t, sort_samples::Cbool)
    ccall((:mts_tensormap_keys_to_properties, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{mts_tensormap_t}, mts_labels_t, mts_array_t, Cbool,),
        tensor, keys_to_move, fill_value, sort_samples
    )
end

function mts_tensormap_components_to_properties(tensor::Ptr{mts_tensormap_t}, dimensions::Ptr{Ptr{Cchar}}, dimensions_count::UIntptr)
    ccall((:mts_tensormap_components_to_properties, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{mts_tensormap_t}, Ptr{Ptr{Cchar}}, UIntptr,),
        tensor, dimensions, dimensions_count
    )
end

function mts_tensormap_keys_to_samples(tensor::Ptr{mts_tensormap_t}, keys_to_move::mts_labels_t, fill_value::mts_array_t, sort_samples::Cbool)
    ccall((:mts_tensormap_keys_to_samples, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{mts_tensormap_t}, mts_labels_t, mts_array_t, Cbool,),
        tensor, keys_to_move, fill_value, sort_samples
    )
end

function mts_tensormap_set_info(tensor::Ptr{mts_tensormap_t}, key::Ptr{Cchar}, value::Ptr{Cchar})
    ccall((:mts_tensormap_set_info, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{Cchar}, Ptr{Cchar},),
        tensor, key, value
    )
end

function mts_tensormap_get_info(tensor::Ptr{mts_tensormap_t}, key::Ptr{Cchar}, value::Ptr{Ptr{Cchar}})
    ccall((:mts_tensormap_get_info, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{Cchar}, Ptr{Ptr{Cchar}},),
        tensor, key, value
    )
end

function mts_tensormap_info_keys(tensor::Ptr{mts_tensormap_t}, keys::Ptr{Ptr{Ptr{Cchar}}}, keys_count::Ptr{UIntptr})
    ccall((:mts_tensormap_info_keys, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{Ptr{Ptr{Cchar}}}, Ptr{UIntptr},),
        tensor, keys, keys_count
    )
end

function mts_tensormap_device(tensor::Ptr{mts_tensormap_t}, device::Ptr{DLDevice})
    ccall((:mts_tensormap_device, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{DLDevice},),
        tensor, device
    )
end

function mts_tensormap_dtype(tensor::Ptr{mts_tensormap_t}, dtype::Ptr{DLDataType})
    ccall((:mts_tensormap_dtype, libmetatensor), 
        mts_status_t,
        (Ptr{mts_tensormap_t}, Ptr{DLDataType},),
        tensor, dtype
    )
end

function mts_labels_load(path::Ptr{Cchar}, labels::Ptr{mts_labels_t})
    ccall((:mts_labels_load, libmetatensor), 
        mts_status_t,
        (Ptr{Cchar}, Ptr{mts_labels_t},),
        path, labels
    )
end

function mts_labels_load_buffer(buffer::Ptr{UInt8}, buffer_count::UIntptr, labels::Ptr{mts_labels_t})
    ccall((:mts_labels_load_buffer, libmetatensor), 
        mts_status_t,
        (Ptr{UInt8}, UIntptr, Ptr{mts_labels_t},),
        buffer, buffer_count, labels
    )
end

function mts_labels_save(path::Ptr{Cchar}, labels::mts_labels_t)
    ccall((:mts_labels_save, libmetatensor), 
        mts_status_t,
        (Ptr{Cchar}, mts_labels_t,),
        path, labels
    )
end

function mts_labels_save_buffer(buffer::Ptr{Ptr{UInt8}}, buffer_count::Ptr{UIntptr}, realloc_user_data::Ptr{Cvoid}, realloc::mts_realloc_buffer_t, labels::mts_labels_t)
    ccall((:mts_labels_save_buffer, libmetatensor), 
        mts_status_t,
        (Ptr{Ptr{UInt8}}, Ptr{UIntptr}, Ptr{Cvoid}, mts_realloc_buffer_t, mts_labels_t,),
        buffer, buffer_count, realloc_user_data, realloc, labels
    )
end

function mts_block_load(path::Ptr{Cchar}, create_array::mts_create_array_callback_t)
    ccall((:mts_block_load, libmetatensor), 
        Ptr{mts_block_t},
        (Ptr{Cchar}, mts_create_array_callback_t,),
        path, create_array
    )
end

function mts_block_load_buffer(buffer::Ptr{UInt8}, buffer_count::UIntptr, create_array::mts_create_array_callback_t)
    ccall((:mts_block_load_buffer, libmetatensor), 
        Ptr{mts_block_t},
        (Ptr{UInt8}, UIntptr, mts_create_array_callback_t,),
        buffer, buffer_count, create_array
    )
end

function mts_block_save(path::Ptr{Cchar}, block::Ptr{mts_block_t})
    ccall((:mts_block_save, libmetatensor), 
        mts_status_t,
        (Ptr{Cchar}, Ptr{mts_block_t},),
        path, block
    )
end

function mts_block_save_buffer(buffer::Ptr{Ptr{UInt8}}, buffer_count::Ptr{UIntptr}, realloc_user_data::Ptr{Cvoid}, realloc::mts_realloc_buffer_t, block::Ptr{mts_block_t})
    ccall((:mts_block_save_buffer, libmetatensor), 
        mts_status_t,
        (Ptr{Ptr{UInt8}}, Ptr{UIntptr}, Ptr{Cvoid}, mts_realloc_buffer_t, Ptr{mts_block_t},),
        buffer, buffer_count, realloc_user_data, realloc, block
    )
end

function mts_tensormap_load(path::Ptr{Cchar}, create_array::mts_create_array_callback_t)
    ccall((:mts_tensormap_load, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{Cchar}, mts_create_array_callback_t,),
        path, create_array
    )
end

function mts_tensormap_load_buffer(buffer::Ptr{UInt8}, buffer_count::UIntptr, create_array::mts_create_array_callback_t)
    ccall((:mts_tensormap_load_buffer, libmetatensor), 
        Ptr{mts_tensormap_t},
        (Ptr{UInt8}, UIntptr, mts_create_array_callback_t,),
        buffer, buffer_count, create_array
    )
end

function mts_tensormap_save(path::Ptr{Cchar}, tensor::Ptr{mts_tensormap_t})
    ccall((:mts_tensormap_save, libmetatensor), 
        mts_status_t,
        (Ptr{Cchar}, Ptr{mts_tensormap_t},),
        path, tensor
    )
end

function mts_tensormap_save_buffer(buffer::Ptr{Ptr{UInt8}}, buffer_count::Ptr{UIntptr}, realloc_user_data::Ptr{Cvoid}, realloc::mts_realloc_buffer_t, tensor::Ptr{mts_tensormap_t})
    ccall((:mts_tensormap_save_buffer, libmetatensor), 
        mts_status_t,
        (Ptr{Ptr{UInt8}}, Ptr{UIntptr}, Ptr{Cvoid}, mts_realloc_buffer_t, Ptr{mts_tensormap_t},),
        buffer, buffer_count, realloc_user_data, realloc, tensor
    )
end
